--- a/index.html
+++ b/index.html
@@ -35,48 +35,40 @@
     </header>
   
     <main>
-        <!-- <section class="main">
+        <section class="main">
             <div class="container">
                 <h1 class="main__title">Эффективные решения для вашего бизнеса</h1>
        
                 <button type="button" class="main__btn" data-modal-open >Заказать услугу</button>
                
             </div>
-        </section> -->
+        </section> 
 
-            <!-- <section class="about"> 
+            <section class="about"> 
                 <div class="container">
                     <ul class="about-soc-list list">
-                        <li class="about-soc-item"> <svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-antenna-1"></use></svg> </li>
-                        <li class="about-soc-item"> <svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-clock-1"></use></svg></li>
-                        <li class="about-soc-item"> <svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-diagram-1"></use></svg></li>
-                        <li class="about-soc-item"> <svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-astronaut-1"></use></svg></li>
-                    </ul>
-                    <ul class="about-list list">
-                        <li class="about-item"> 
+                        <li class="about-soc-item"> <div class="block-svg"><svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-antenna-1"></use></svg></div> 
                             <h3 class="about-title">Внимание к деталям</h3>
-                                <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
-                                </p>
-                        </li>
-                        <li class="about-item">
+                            <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
+                            </p> </li>
+                        <li class="about-soc-item"> <div class="block-svg"><svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-clock-1"></use></svg></div> 
                             <h3 class="about-title">Пунктуальность</h3>
-                                <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
-                                    собой.</p>
-                        </li>
-                        <li class="about-item">
+                            <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                                собой.</p></li>
+                        <li class="about-soc-item"> <div class="block-svg"><svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-diagram-1"></use></svg></div> 
                             <h3 class="about-title">Планирование</h3>
-                                <p class="about-text">Равным образом консультация с широким активом в значительной степени
-                                    обуславливает.</p>
+                            <p class="about-text">Равным образом консультация с широким активом в значительной степени
+                                обуславливает.</p>
                         </li>
-                        <li class="about-item">
+                        <li class="about-soc-item"> <div class="block-svg"><svg class="about-icon" width="70" height="70"> <use href="./images/icons.svg#icon-astronaut-1"></use></svg></div>
                             <h3 class="about-title">Современные технологии</h3>
-                                <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p> 
                         </li>
                     </ul>
                 </div>
-            </section>  -->
+            </section>  
 
-        <!-- <section class="work">
+        <section class="work">
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="work-list list">
@@ -86,7 +78,7 @@
                     <li class="work-item"> <div class="work-wrap"><img src="images/img_3.jpg" alt="палитра" width="370" height="294"> <p class="work-text">Дизайнерские решения</p></div>  </li>
                 </ul>
             </div>
-        </section> -->
+        </section> 
 
          <section class="team"> 
             <div class="container">
@@ -166,7 +158,7 @@
             </div>
         </section> 
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer"> 
         <div class="container">
             <div class="footer-container"> 
                 <div>
@@ -201,7 +193,7 @@
                     </div>
             </div>
         </div>
-    </footer> -->
+    </footer> 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close> <svg class="modal-close-icon" width="11" height="11"><use href="./images/icons.svg#icon-Vector"></use></svg> </button>
