--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="work-list list">
-                    <li class="work-item"> <div class="work-wrap"><img src="images/img_1.jpg" alt="кодинг" width="370" height="294"> 
+                    <li class="work-item"> <div class="work-wrap"><img srcset="images/img_1.jpg 1x, images/work-img1-2x.jpg 2x" src="images/img_1.jpg" alt="кодинг" width="370" height="294"> 
                         <p class="work-text">Десктопные приложения</p></div></li>
-                    <li class="work-item"> <div class="work-wrap"><img src="images/img_2.jpg" alt="мобильный дизайн" width="370" height="294"> <p class="work-text">Мобильные приложения</p></div></li>
-                    <li class="work-item"> <div class="work-wrap"><img src="images/img_3.jpg" alt="палитра" width="370" height="294"> <p class="work-text">Дизайнерские решения</p></div>  </li>
+                    <li class="work-item"> <div class="work-wrap"><img srcset="images/img_2.jpg 1x,  images/work-img2-2x.jpg 2x" src="images/img_2.jpg" alt="мобильный дизайн" width="370" height="294"> <p class="work-text">Мобильные приложения</p></div></li>
+                    <li class="work-item"> <div class="work-wrap"><img srcset="images/img_3.jpg 1x, images/work-img3-2x.jpg 2x" src="images/img_3.jpg" alt="палитра" width="370" height="294"> <p class="work-text">Дизайнерские решения</p></div>  </li>
                 </ul>
             </div>
         </section> 
