--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header-container">
                     <nav class="nav">
                         <a lang="en" href="" class="nav__logo link">Web<span class="nav__logo__span">Studio</span></a>
-                        <div class="menu-desktop"> <ul class="menu">
+                        <ul class="menu">
                             <li class="menu__item list"><a class="menu__item-list active link" href="index.html">Студия</a></li>
                             <li class="menu__item list"><a class="menu__item-list link" href="portfolio.html">Портфолио</a></li>
                             <li class="menu__item list"><a class="menu__item-list link" href="">Контакты</a></li>
@@ -29,8 +29,7 @@
                     <div class="connect">
                         <a class="connect__contacts link" href="mailto:info@devstudio.com"><svg class="connect__contacts-icon" width="16" height="16"> <use href="./images/icons.svg#icon-envelope"></use></svg> <span class="connect__contacts-span">info@devstudio.com</span></a>
                         <a class="connect__contacts link" href="tel:+380961111111"><svg class="connect__contacts-icon" width="16" height="16"> <use href="./images/icons.svg#icon-smartphone"></use></svg> <span class="connect__contacts-span">+38 096 111 11 11</span></a> 
-                    </div></div>
-                       
+                    </div>
                 </div>
             </div>
             
