--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,8 @@
             <ul class="pictures-list list">
                
                 <li class="pictures-item">
-                    <picture>
+                    
+                    <a href="" class="portfolio-link">  <div class="pictures-top-wrap"><picture>
                         <source 
                         srcset="
                         images/web-site.jpg  1x,
@@ -113,7 +114,6 @@
                         media="(min-width: 320px)">
                         <img src="images/web-site.jpg" alt="Веб-сайт" width="370" height="294"> </img>
                     </picture>
-                    <a href="" class="portfolio-link">  <div class="pictures-top-wrap"><img src="images/web-site.jpg" alt="Веб-сайт" width="370" height="294">
                         <p class="pictures-top-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                     </div>
                    <div class="pictures-content">
@@ -145,7 +145,7 @@
                         media="(min-width: 320px)">
                         <img src="images/basketball.jpg" alt="Дизайн" width="370" height="294"> </img>
                     </picture>
-                    <a href="" class="portfolio-link"> <img src="images/basketball.jpg" alt="Дизайн" width="370" height="294">
+                    <a href="" class="portfolio-link"> 
                         <div class="pictures-content">
                             <h3 class="pictures-title" lang="en">Постер New Orlean vs Golden Star</h3>
                             <p class="pictures-after-title">Дизайн</p>
@@ -174,7 +174,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/seafood.jpg" alt="Приложение" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"> <img src="images/seafood.jpg" alt="Приложение" width="370" height="294">
+                    <a href="" class="portfolio-link"> 
                         <div class="pictures-content">
                             <h3 class="pictures-title" lang="en">Ресторан Seafood</h3>
                             <p class="pictures-after-title">Приложение</p> 
@@ -203,7 +203,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/headphones.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"> <img src="images/headphones.jpg" alt="Маркетинг" width="370" height="294">
+                    <a href="" class="portfolio-link"> 
                         <div class="pictures-content">
                             <h3 class="pictures-title">Проект Prime</h3>
                             <p class="pictures-after-title">Маркетинг</p>
@@ -232,7 +232,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/boxes.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"><img src="images/boxes.jpg" alt="Приложение" width="370" height="294">
+                    <a href="" class="portfolio-link">
                         <div class="pictures-content">
                             <h3 class="pictures-title">Проект Boxes</h3>
                             <p class="pictures-after-title">Приложение</p>
@@ -261,7 +261,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/imac.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"><img src="images/imac.jpg" alt="Веб-сайт" width="370" height="294">
+                    <a href="" class="portfolio-link">
                         <div class="pictures-content">
                             <h3 class="pictures-title">Inspiration has no Borders</h3>
                             <p class="pictures-after-title">Веб-сайт</p>
@@ -289,7 +289,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/book.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"> <img src="images/book.jpg" alt="Дизайн" width="370" height="294">
+                    <a href="" class="portfolio-link"> 
                         <div class="pictures-content">
                             <h3 class="pictures-title">Издание Limited Edition</h3>
                             <p class="pictures-after-title">Дизайн</p>
@@ -317,7 +317,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/lab_tag.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"><img src="images/lab_tag.jpg" alt="Маркетинг" width="370" height="294">
+                    <a href="" class="portfolio-link">
                         <div class="pictures-content">
                             <h3 class="pictures-title">Проект LAB</h3>
                             <p class="pictures-after-title">Маркетинг</p>
@@ -345,7 +345,7 @@
                          "
                         media="(min-width: 320px)">
                         <img src="images/macbook.jpg" alt="Маркетинг" width="370" height="294"> </img>
-                    <a href="" class="portfolio-link"><img src="images/macbook.jpg" alt="Приложение" width="370" height="294">
+                    <a href="" class="portfolio-link">
                         <div class="pictures-content">
                             <h3 class="pictures-title">Growing Business</h3>
                             <p class="pictures-after-title">Приложение</p>
