--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <a lang="en" href="" class="nav__logo link">Web<span class="header-span">Studio</span></a>
                    <div class="menu-desktop">
                      <ul class="menu">
-                    <li class="menu__item list"><a class="menu__item-list link" href="index.html">Студия</a></li>
-                    <li class="menu__item list"><a class="menu__item-list active link" href="portfolio.html">Портфолио</a></li>
+                    <li class="menu__item list"><a class="menu__item-list active link" href="index.html">Студия</a></li>
+                    <li class="menu__item list"><a class="menu__item-list link" href="portfolio.html">Портфолио</a></li>
                     <li class="menu__item list"><a class="menu__item-list link" href="">Контакты</a></li>
                 </ul>
             </nav>
