--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                       <use href="./images/icons.svg#icon-Vector-4"></use>
                     </svg>
                   </span>
-                Соглашаюсь с рассылкой и принимаю &nbsp;<a href="">  Условия договора</a>
+                Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
               </label>
         </div>
 
